# ECF_poc

./: .gitignore  CMakeLists.txt  README.md
src/: DebugingMain.template  cyclicAgentEvaluationMain.cpp  cyclicAgentEvaluationMain.h  ensembleConcurrentMain.cpp  ensembleConcurrentMain.h  ensemblePreparationMain.cpp  ensemblePreparationMain.h  evaluationMain.cpp  evaluationMain.h  evaluationMainForAllSingleAgents.cpp  evaluationMainForAllSingleAgents.h  evolutionConcurrentMain.cpp  evolutionConcurrentMain.h  evolutionMain.cpp  evolutionMain.h  main.cpp  main_oneRun.template  parameters.txt  regenerateFitnessMain.cpp  regenerateFitnessMain.h  total_output.txt  util.cpp  util.h
src/data/: cityflow_config.json  cityflow_config_hangzhou_4x4.json  ecf_config.xml  ecf_gplightplus.xml  ecf_gplightplusWithCurrentPhase.xml  replay_roadnet.json  roadnet.json  roadnet_for_order_change.json  roadnet_for_order_change_with_half_red.json
src/include/Evolution/: Gplightevalop.hpp
src/include/agent/: Agent.hpp  CyclicAgent.hpp  EnsembleGPLightAgent.hpp  Evaluator.hpp  Gplightagent.hpp  GplightagentWihtCurrentPhase.hpp  ImprovedGPLightAgent.hpp  WorstLanesAgent.hpp
src/include/procesing/: roadnet_loader.h
src/include/simulator/: CityFlowEngine.hpp  SimulationRunner.hpp  SimulatorEngine.cpp  SimulatorEngine.hpp
